--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -6,6 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".Controllers.TimerActivity">
 
+    <TextView
+        android:id="@+id/points_TextView_TimerActivity"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="center_vertical"
+        android:text="Reward"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_timerActivity"
+        app:layout_constraintStart_toEndOf="@+id/starImage_TimerActivity"
+        app:layout_constraintTop_toTopOf="@+id/imageView_timerActivity" />
+
+    <TextView
+        android:id="@+id/taskName_TextView_TimerActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Task"
+        android:textColor="#353535"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/backButton5"
         android:layout_width="wrap_content"
@@ -25,36 +50,33 @@
         android:id="@+id/startTimer_Button_TimerActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="124dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/ic_play_button"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/countdown_ProgressBar_TimerActivity"
         tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/pauseTimer_Button_TimerActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="124dp"
         android:src="@drawable/ic_pause_button"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/startTimer_Button_TimerActivity"
+        app:layout_constraintTop_toBottomOf="@+id/countdown_ProgressBar_TimerActivity"
         tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/stopTimer_Button_TimerActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/ic_stop_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toEndOf="@+id/startTimer_Button_TimerActivity"
+        app:layout_constraintTop_toBottomOf="@+id/countdown_ProgressBar_TimerActivity"
         tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
 
     <TextView
@@ -63,10 +85,10 @@
         android:layout_height="wrap_content"
         android:text="10:00"
         android:textSize="70sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@+id/countdown_ProgressBar_TimerActivity"
+        app:layout_constraintEnd_toEndOf="@+id/countdown_ProgressBar_TimerActivity"
+        app:layout_constraintStart_toStartOf="@+id/countdown_ProgressBar_TimerActivity"
+        app:layout_constraintTop_toTopOf="@+id/countdown_ProgressBar_TimerActivity" />
 
     <me.zhanghai.android.materialprogressbar.MaterialProgressBar
         android:id="@+id/countdown_ProgressBar_TimerActivity"
@@ -84,13 +106,32 @@
         android:id="@+id/finish_Button_TimerActivity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="412dp"
+        android:layout_marginBottom="50dp"
         android:onClick="updateTotalPoints"
         android:text="I'm finished!"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toTopOf="@+id/startTimer_Button_TimerActivity"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView_timerActivity"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskName_TextView_TimerActivity"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:id="@+id/starImage_TimerActivity"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_timerActivity"
+        app:layout_constraintStart_toEndOf="@+id/imageView_timerActivity"
+        app:layout_constraintTop_toTopOf="@+id/imageView_timerActivity"
+        app:srcCompat="@drawable/star_icon_stylized_svg" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
