--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_bg"
         android:backgroundTint="@color/cyan"
-        android:onClick="goToAllTaskActivity"
+        android:onClick="goToAddTaskPinActivity"
         android:text="+"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
